# query-sanitizer-mcp

./: .env.example  .gitignore  README.md  SKETCH_PLAN.md  pyproject.toml  server.py  setup.sh
.github/workflows/: ci.yml
examples/: 01_api_key_leak.md  02_employee_pii.md  03_internal_infra.md
scripts/: ledger.py
tests/: test_ledger.py  test_server.py
